feat: adicionado login jwt e testes